--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,8 +11,7 @@ body{
     padding:0;
     box-sizing: border-box;
     font-family: 'Josefin Sans', sans-serif;
-    line-height: 1.3;
-    
+    line-height: 1.3;   
 }
 
 *,*::before,*::after{
@@ -24,8 +23,6 @@ p{
     color:var(--primary-desaturated-red);
     line-height: 1.7;
     margin-bottom:40px;
-    
-    
 }
 
 h1{ font-size:2.5rem;
@@ -33,7 +30,6 @@ h1{ font-size:2.5rem;
     letter-spacing: .7rem;
     line-height: 1;
     font-weight: 700;
-    //margin-bottom:0;
 }
 
 .accent{font-weight: 200; color:var(--primary-desaturated-red);}
@@ -48,7 +44,8 @@ h1{ font-size:2.5rem;
 
 header{
     padding:2rem 0 1rem 2rem;
-height:auto;
+    height:auto;
+    
     img{width:30%;}
 }
 
@@ -106,15 +103,12 @@ height:auto;
                 outline:none;
                 border:none;
                 background-image: linear-gradient(135deg, hsl(0, 74%, 74%), hsl(0, 80%, 86%));
-                
-                //box-shadow: 0px 5px 10px 0px var(--primary-desaturated-red);
             }
 
             button:hover{
                 background-image: linear-gradient(135deg, hsl(0, 100%, 98%), hsl(0, 74%, 74%));
                 box-shadow: 0px 10px 20px 0px #f4aaab;
                 border:none;
-        
             }
             
             
@@ -125,7 +119,6 @@ height:auto;
                 top:25%;
                 right:100px;
                 display:none;
-
             }
 
             .error-message{
@@ -142,7 +135,7 @@ height:auto;
         form.error{
             .error-icon{display: block;}
             .error-message{display: block;}
-            input{ border:2px solid var(--primary-soft-red) }
+            input{ border:2px solid var(--primary-soft-red);}
         }
     }
 
