--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,7 +36,7 @@ h1{ font-size:2.5rem;
 
 .desktop-hero{
     visibility: hidden;
-    background-image: url(/images/hero-desktop.jpg);
+    background-image: url(./images/hero-desktop.jpg);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -143,7 +143,7 @@ header{
     .mobile-hero{
         width:100%;
         height:300px;
-        background-image: url(/images/hero-mobile.jpg);
+        background-image: url(./images/hero-mobile.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -176,7 +176,7 @@ header{
     
     .main-container{
         flex-direction: row;
-        background-image: url(/images/bg-pattern-desktop.svg);
+        background-image: url(./images/bg-pattern-desktop.svg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -198,7 +198,7 @@ header{
             visibility: visible;
             width:80%;
             height:100vh;
-            background-image: url(/images/hero-desktop.jpg);
+            background-image: url(./images/hero-desktop.jpg);
             background-repeat: no-repeat;
             background-position: left;
             background-size: cover;
