--- a/scss/main.css
+++ b/scss/main.css
@@ -42,7 +42,7 @@ h1 {
 
 .desktop-hero {
   visibility: hidden;
-  background-image: url(/images/hero-desktop.jpg);
+  background-image: url(/BaseApparel/images/hero-desktop.jpg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -175,7 +175,7 @@ header img {
 .main-container .mobile-hero {
   width: 100%;
   height: 300px;
-  background-image: url(/images/hero-mobile.jpg);
+  background-image: url(/BaseApparel/images/hero-mobile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -209,7 +209,7 @@ header img {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    background-image: url(/images/bg-pattern-desktop.svg);
+    background-image: url(/BaseApparel/images/bg-pattern-desktop.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -230,7 +230,7 @@ header img {
     visibility: visible;
     width: 80%;
     height: 100vh;
-    background-image: url(/images/hero-desktop.jpg);
+    background-image: url(/BaseApparel/images/hero-desktop.jpg);
     background-repeat: no-repeat;
     background-position: left;
     background-size: cover;
